--- a/packages/theme/src/scss/components/progress/basic.scss
+++ b/packages/theme/src/scss/components/progress/basic.scss
@@ -135,7 +135,7 @@
       @include setVars(
         (
           height: calc(#{getSpaceValue(2)} * 3 / 2),
-          border-radius: getRadiusValue(1, false),
+          border-radius: getRadiusValue(1, 'thumb'),
         )
       );
     }
@@ -143,7 +143,7 @@
       @include setVars(
         (
           height: getSpaceValue(2),
-          border-radius: getRadiusValue(2, false),
+          border-radius: getRadiusValue(2, 'thumb'),
         )
       );
     }
@@ -151,7 +151,7 @@
       @include setVars(
         (
           height: getSpaceValue(3),
-          border-radius: getRadiusValue(3, false),
+          border-radius: getRadiusValue(3, 'thumb'),
         )
       );
     }
