--- a/packages/theme/src/scss/components/radio/surface.button.scss
+++ b/packages/theme/src/scss/components/radio/surface.button.scss
@@ -12,6 +12,6 @@
 
   @include is((button, checked)) {
     background-color: getSemanticColor(surface);
-    color: getAccentColor(a11);
+    color: getAccentColor(11);
   }
 }
